Test/git-issues/git-issue-452b.dfy.expect
git-issue-452b.dfy(13,16): Error: ghost variables such as u are allowed only in specification contexts. u was inferred to be ghost based on its use or declaration.
1 resolution/type errors detected in git-issue-452b.dfy
